# QtApplications

Database/: MyTouristManager.db
TouristMangerApp/TouristManagerApp/: CMakeLists.txt  DatabaseHeader.h  addpackage.cpp  addpackage.h  addpackage.ui  findpackage.cpp  findpackage.h  findpackage.ui  findtourist.cpp  findtourist.h  findtourist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registertourist.cpp  registertourist.h  registertourist.ui  ressources.qrc
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-e6d5ba05d3fed936bb1c.json  target-TouristManagerApp-Debug-e6707921b1f4acd2d8bd.json  target-TouristManagerApp_autogen-Debug-74ad2ea11749fe333039.json
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-a39c053c89e42dfcd35e.json  cmakeFiles-v1-cf9c62543c42886c5a44.json  directory-.-Debug-5ee8e3522dd7f0dbb0b1.json  index-2023-07-22T11-52-48-0149.json  target-TouristManagerApp_autogen_timestamp_deps-Debug-925e8874c2ae8ac29d36.json
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: DatabaseHeader.h.55646C22795E0FB3.idx  QSqlDriver.4EC07D26D36D35D4.idx  QSqlTableModel.7F48B413D718B7FE.idx  (+29 more)
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/TouristManagerApp_autogen/: deps  mocs_compilation.cpp
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/TouristManagerApp_autogen/EWIEGA46WW/: moc_addpackage.cpp  moc_addpackage.cpp.d  moc_findpackage.cpp  moc_findpackage.cpp.d  moc_findtourist.cpp  moc_findtourist.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_registertourist.cpp  moc_registertourist.cpp.d  qrc_ressources.cpp
TouristMangerApp/build-TouristManagerApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/TouristManagerApp_autogen/include/: ui_addpackage.h  ui_findpackage.h  ui_findtourist.h  ui_mainwindow.h  ui_registertourist.h
